tools/Consul/route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: example-route-1
spec:
 parentRefs:
 - name: api-gateway
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /echo
   backendRefs:
   - kind: Service
     name: echo-1
     port: 8080
     weight: 50
   - kind: Service
     name: echo-2
     port: 8090
     weight: 50
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: example-route-2
spec:
 parentRefs:
 - name: api-gateway
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /
   backendRefs:
   - kind: Service
     name: nginx
     port: 80
